gitops/manifests/homebox/install.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homebox
  labels:
    io.kompose.service: homebox
  name: homebox
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: homebox
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: homebox
    spec:
      containers:
        - env:
            - name: HBOX_LOG_FORMAT
              value: text
            - name: HBOX_LOG_LEVEL
              value: info
            - name: HBOX_WEB_MAX_UPLOAD_SIZE
              value: "10"
            - name: TZ
              value: America/New_York
          image: ghcr.io/hay-kot/homebox:v0.9.2
          name: homebox
          ports:
            - containerPort: 7745
              hostPort: 3100
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /data
              name: homebox-data
      restartPolicy: Always
      volumes:
        - name: homebox-data
          persistentVolumeClaim:
            claimName: homebox-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: homebox
  labels:
    io.kompose.service: homebox
  name: homebox
spec:
  ports:
    - name: "3100"
      port: 3100
      targetPort: 7745
  selector:
    io.kompose.service: homebox
status:
  loadBalancer: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homebox-ingress
  namespace: homebox
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homebox.local.timmybtech.com`)
      kind: Rule
      services:
        - name: homebox
          port: 3100
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
